--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xqs</groupId>
-	<artifactId>mybatis</artifactId>
+	<artifactId>mybatis-standard</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>mybatis</name>
